<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/cityET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cityET_hint"
        android:textSize="@dimen/bigTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/getWeatherBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defMargin"
        android:text="@string/getWeatherBTN_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityET" />

    <TextView
        android:id="@+id/minTempTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defMargin"
        android:text="@string/minTempTV_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getWeatherBTN" />

    <TextView
        android:id="@+id/maxTempTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defMargin"
        android:text="@string/maxTempTV_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_center"
        app:layout_constraintTop_toBottomOf="@+id/getWeatherBTN" />

    <ImageView
        android:id="@+id/weatherIW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defMargin"
        android:minWidth="@dimen/minImageHeight"
        android:minHeight="@dimen/minImageHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minTempTV"
        app:srcCompat="@drawable/common_google_signin_btn_icon_light_normal_background" />

    <TextView
        android:id="@+id/windDirectionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defMargin"
        android:text="@string/windDirectionTV_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherIW" />

    <TextView
        android:id="@+id/windSpeedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defMargin"
        android:text="@string/windSpeedTV_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_center"
        app:layout_constraintTop_toBottomOf="@+id/weatherIW" />

    <TextView
        android:id="@+id/pressureTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defMargin"
        android:text="@string/pressureTV_text"
        android:textSize="@dimen/smallTextSize"
        app:layout_constraintEnd_toStartOf="@+id/guideline_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/windDirectionTV" />

    <TextView
        android:id="@+id/humidityTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defMargin"
        android:text="@string/humidityTV_text"
        android:textSize="@dimen/smallTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_center"
        app:layout_constraintTop_toBottomOf="@+id/windSpeedTV" />

</androidx.constraintlayout.widget.ConstraintLayout>