<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/defPadding">

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/bigMargin"
        android:hint="@string/titleTV_hint"
        android:textAlignment="center"
        android:textSize="@dimen/textSize"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/defMargin"
        android:src="@drawable/weather" />

    <TextView
        android:id="@+id/descriptionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/defMargin"
        android:hint="@string/descriptionTV_hint"
        android:textAlignment="center"
        android:textSize="@dimen/textSize" />

    <Button
        android:id="@+id/startBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/defMargin"
        android:text="@string/startBTN_text"
        android:visibility="gone" />
</LinearLayout>
